--- a/style.cfg
+++ b/style.cfg
@@ -16,8 +16,8 @@
 #
 
 # General Information about this style
-name = PBWoW3
-copyright = © PayBas, 2014
+name = SE-PBWoW3
+copyright = © PayBas, 201 and Philip Peterson, 2015
 style_version = 3.0.1
 phpbb_version = 3.1.2
 
